remove artificial spacing at the bottom of the html pages and adjusted footer. Removed footer being fixed for a better user experience.

--- a/public/styles/materialize.css
+++ b/public/styles/materialize.css
@@ -2338,7 +2338,7 @@ ul.staggered-list li {
   }
 }
 footer {
-  position: fixed;
+  position: relative;
   height: 20%;
   width: 100%;
   z-index: 100;
